fix: joeks image
